assets/scss/betterlinks-gutenberg.scss
.btl-link-generator {
	margin-top: 12px !important;
	margin-bottom: 10px !important;
}
.betterlinks-instant-redirect {
	.betterlinks-instant-redirect-form-group {
		display: flex;
		.betterlinks-instant-redirect-form-label {
			min-width: 100px;
			span.pro-badge {
				background: linear-gradient(202deg, #2961ff 0%, #003be2 100%);
				color: #fff;
				border-radius: 2px;
				padding: 3px 6px;
				font-size: 10px;
				margin-left: 3px;
				line-height: 1;
				text-transform: uppercase;
				display: inline-flex;
				align-items: center;
				border-radius: 2px;
				transform: translateY(-10px);
			}
		}
		input[type='checkbox'] {
			margin-top: 2px;
			background: #ddd;
		}
		&:not(:last-child) {
			margin-bottom: 10px;
		}
	}
	.MuiFormControl-root.MuiTextField-root {
		width: 100%;
	}
}
.betterlinks-upgradetopro {
	text-align: center;
	h3 {
		color: rgba(0, 0, 0, 0.65);
		font-weight: 600;
		font-size: 27px;
	}
	p {
		a {
			color: #e64942;
			font-weight: 600;
		}
	}
	.btn-close {
		background: #e64942;
		color: #fff;
		padding: 10px 20px;
		border: 0;
		border-radius: 4px;
		cursor: pointer;
		float: right;
	}
}
.ReactModal__Content {
	padding: 60px !important;
	width: 60%;
	@media screen and (max-width: 1599px) {
		width: 75%;
	}
	@media screen and (max-width: 1199px) {
		width: 80%;
	}
	@media screen and (max-width: 650px) {
		padding: 20px !important;
	}
}

//
// gutenberg richtext 'betterlinks format' css -> start
.btl-url-popover-slot {
	& > .components-popover__content {
		box-shadow: rgb(36 36 36 / 10%) 0px 0px 20px;
	}

	form.btl-links-search-form {
		display: flex;

		.btl-url-search-field.temporary-focus {
			border: 3px solid #2271b199;
		}
		.btl-url-search-field {
			width: 300px;
			color: #555;
			padding: 3px 10px;
			margin-left: 0px;
			border-radius: 0;
			border: none;
			border-right: 1px solid #cecece;

			&:focus {
				box-shadow: none;
				outline: none;
			}

			& > .components-base-control__field {
				margin: 0;
			}

			button.btl-submit-button {
				padding: 5px 0;
			}

			input.components-text-control__input {
				padding: 10px;
				border: 1px solid #ccc;
				margin: 0;
			}
		}
	}

	.betterlinks-format-link-preview-wrapper {
		padding: 4px 10px 6px 10px;
		display: flex;
		align-items: center;

		a {
			display: flex;
			align-items: center;
			flex-grow: 1;
			flex-shrink: 1;
			overflow: hidden;
			text-overflow: ellipsis;
			white-space: nowrap;
			min-width: 150px;
			max-width: 500px;
			font-size: 14px;

			&:focus {
				box-shadow: none;
				outline: none;
				text-decoration: underline;
			}

			i.btl-visit-url {
				margin-left: 3px;
			}
		}

		button {
			background: none;
			border: none;
			display: flex;
			margin: 0;
			cursor: pointer;
			padding: 0;
			margin-left: 5px;
			color: #b0b2ba;

			&:hover {
				color: #003be2;
			}

			&:focus {
				border: none;
				box-shadow: none;
				outline: none;
			}
		}

		button.betterlinks-format-change-link {
			font-size: 20px;
		}

		button.betterlinks-format-edit-link {
			font-size: 13px;
		}
	}
}

.betterlinks-invalid-link-popover {
	.betterlinks_format_invalid_link_warning {
		width: 300px;
		color: red;
		padding: 5px 10px;
		& button {
			padding: 5px 10px;
			margin-left: 10px;
			border: 1px solid #007cba;
			background: #007cba;
			color: #fff;
			border-radius: 3px;
			font-size: 15px;
			cursor: pointer;
			&:hover {
				background: #006ba1;
			}
			&:focus {
				box-shadow: none;
			}
		}
	}
}

ul.betterlinks-suggessions-wrapper-ul {
	margin: 0;
	padding: 10px 0;
	width: 300px;
}

ul.betterlinks-suggessions-wrapper-ul li.betterlinks-suggessted-link-li {
	cursor: pointer;
	margin: 0;
	padding: 5px 10px;
}

ul.betterlinks-suggessions-wrapper-ul li.betterlinks-suggessted-link-li:hover,
ul.betterlinks-suggessions-wrapper-ul li.betterlinks-suggessted-link-li.active {
	background-color: #e3e3e3;
}

.btl-url-popover-slot + .components-popover {
	margin: 0 !important;
}

.btl-url-popover-slot + .components-popover > .components-popover__content {
	margin-left: -18px;
}

span.hl {
	color: #222;
	font-weight: 700;
}

body.betterlinks-formatting-enabled {
	#wpadminbar,
	.interface-interface-skeleton__footer {
		z-index: -1 !important;
	}

	.interface-interface-skeleton__body {
		z-index: 33 !important;
	}

	#adminmenuback,
	#adminmenuwrap {
		z-index: 0 !important;
	}
}

body.betterlinks-format-link-preview-mounted .btl-url-popover-slot > .components-popover__content {
	overflow: visible !important;
}

.betterlinks-expanded-format-options form.betterlinks-format-new-link-form button,
.betterlinks-expanded-format-options form.betterlinks-format-new-link-form input {
	border-radius: 5px;
}

.betterlinks-expanded-format-options form.betterlinks-format-new-link-form h4 {
	padding: 0 !important;
	margin: 10px 0 !important;
}

.betterlinks-expanded-format-options form.betterlinks-format-new-link-form input {
	display: block;
	padding: 0px 5px;
	margin-bottom: 5px;
	border: 1px solid #ccc;
	width: 100%;
}

.betterlinks-expanded-format-options form.betterlinks-format-new-link-form button {
	border: 1px solid #007cba;
	background: #007cba;
	color: #fff;
	padding: 10px 20px;
	font-size: 15px;
	cursor: pointer;
}

.betterlinks-expanded-format-options form.betterlinks-format-new-link-form button:hover {
	background: #006ba1;
}

.betterlinks-expanded-format-options .components-base-control__field {
	margin-bottom: 5px !important;
}

.betterlinks-expanded-format-options form.betterlinks-format-new-link-form button:focus {
	box-shadow: none;
}

svg.betterlinks_logo_svg.betterlinks_logo_svg_gutenberg_format {
	height: 22px !important;
}

// gutenberg richtext 'betterlinks format' css -> end

//

@import './betterlinks.scss';
// @import './common/variable';
// @import './components/modal';

//

